# CUDA-GameOfLife

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main
cmake/: FindGLFW3.cmake  get_glfw3.cmake
res/shaders/: GameOfLife.shader
shaders/: Basic.shader  Charges.shader  Field.shader  GameOfLife.shader
src/: CMakeLists.txt  ColorData.h  GoLCudaBuffer.h  IndexBuffer.cpp  IndexBuffer.h  MaxwellPipeline.cu  MaxwellPipeline.h  Renderer.cpp  Renderer.h  RunLengthEncode.h  Shader.cpp  Shader.h  Utility.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  golCUDA.cu  golCUDA.h  golPipeline.cpp  golPipeline.cu  golPipeline.h  lbPipeline.cu  lbPipeline.h  main.cpp  main.cu  maxwellCUDA.cu  openGLutils.cpp  openGLutils.h  vectors.h
